Revision history for File::DataClass

0.1.146  2009-11-04
         - Passes tests

0.1.47   2009-10-16
         - Started this log