@@ -1,5 +1,7 @@
 Revision history for File::DataClass
 
+         - Added support for passwd and group files
+
 0.1.146  2009-11-04
          - Passes tests
 
